# librisai

./: .gitignore  README.md  api.py  main.py  pyproject.toml
libris/: ingest.py  llm.py  retriever.py  store.py
spec/: generate_report.py
static/: app.js  index.html  style.css
